[gd_scene load_steps=8 format=3 uid="uid://ci44kyr41ubf3"]

[ext_resource type="Material" uid="uid://5b5fxxvq4af1" path="res://shaders/backdrop.tres" id="1_11msr"]
[ext_resource type="Script" path="res://scripts/ShaderPhysicsCarousel.gd" id="2_oplaa"]
[ext_resource type="Texture2D" uid="uid://bfkveflcexy2e" path="res://art/boxExplosive.png" id="4_2kqwc"]
[ext_resource type="Texture2D" uid="uid://ctwytdb3diji4" path="res://art/Tile/brown_block.png" id="4_l5yub"]

[sub_resource type="Curve2D" id="Curve2D_j2tcs"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 105, 58, 0, 0, 0, 0, 247, 43, 0, 0, 0, 0, 391, 159, 0, 0, 0, 0, 445, 352, 0, 0, 0, 0, 371, 507, 0, 0, 0, 0, 111, 578, 0, 0, 0, 0, 20, 405, 0, 0, 0, 0, 20, 405, 0, 0, 0, 0, 63, 202, 0, 0, 0, 0, 105, 58)
}
point_count = 10

[sub_resource type="Curve2D" id="Curve2D_jedwc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 396, 417, 0, 0, 0, 0, 464, 236, 0, 0, 0, 0, 643, -16, 0, 0, 0, 0, 790, 123, 0, 0, 0, 0, 781, 309, 0, 0, 0, 0, 764, 507, 0, 0, 0, 0, 597, 643, 0, 0, 0, 0, 481, 572, 0, 0, 0, 0, 396, 417)
}
point_count = 9

[sub_resource type="Curve2D" id="Curve2D_sqt31"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 116, 533, 0, 0, 0, 0, 354, 558, 0, 0, 0, 0, 493, 779, 0, 0, 0, 0, 456, 991, 0, 0, 0, 0, 272, 1127, 0, 0, 0, 0, 15, 1033, 0, 0, 0, 0, -104, 770, 0, 0, 0, 0, 116, 533)
}
point_count = 8

[node name="Backdrop" type="Node2D"]
z_index = -4
material = ExtResource("1_11msr")
position = Vector2(26, 46)

[node name="ShaderPhysicsCarousel" type="Node2D" parent="."]
position = Vector2(-7, -9)
script = ExtResource("2_oplaa")
shader = ExtResource("1_11msr")

[node name="ReferenceBlock" type="Sprite2D" parent="ShaderPhysicsCarousel"]
visible = false
z_index = 4
texture = ExtResource("4_l5yub")

[node name="RedPath" type="Path2D" parent="ShaderPhysicsCarousel"]
curve = SubResource("Curve2D_j2tcs")

[node name="PathFollow2D" type="PathFollow2D" parent="ShaderPhysicsCarousel/RedPath"]
position = Vector2(105, 58)
rotation = -0.105244

[node name="BluePath" type="Path2D" parent="ShaderPhysicsCarousel"]
curve = SubResource("Curve2D_jedwc")

[node name="PathFollow2D" type="PathFollow2D" parent="ShaderPhysicsCarousel/BluePath"]
position = Vector2(396, 417)
rotation = -1.21142

[node name="GreenPath" type="Path2D" parent="ShaderPhysicsCarousel"]
curve = SubResource("Curve2D_sqt31")

[node name="PathFollow2D" type="PathFollow2D" parent="ShaderPhysicsCarousel/GreenPath"]
position = Vector2(116, 533)
rotation = 0.104658

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("1_11msr")
position = Vector2(513.361, 484)
scale = Vector2(16.8185, 17.6734)
texture = ExtResource("4_2kqwc")
